tdf#119615 Ownership of m_aFields is..

.. on Mariadb side

Change-Id: Id65487191c29f7af1a171c06345034d1dc5b20ec