connectivity/source/drivers/mysqlc/mysqlc_resultset.cxx
@@ -109,8 +109,6 @@ OResultSet::OResultSet(OConnection& rConn, OCommonStatement* pStmt, MYSQL_RES* p
     fieldCount = mysql_num_fields(pResult);
 }
 
-OResultSet::~OResultSet() {}
-
 void OResultSet::disposing()
 {
     OPropertySetHelper::disposing();
